# codelab-auth-service

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  TRACING_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  verify_migration.py
app/: __init__.py  main.py
app/core/: config.py  dependencies.py  security.py  seed.py
app/middleware/: __init__.py  logging.py  rate_limit.py
app/models/: __init__.py  audit_log.py  database.py  email_confirmation_token.py  oauth_client.py  password_reset_token.py  refresh_token.py  user.py
app/schemas/: __init__.py  oauth.py  password_reset.py  session.py  token.py  user.py
app/services/: __init__.py  audit_service.py  auth_service.py  brute_force_protection.py  email_notifications.py  email_retry.py  email_sender.py  email_service.py  email_templates.py  (+11 more)
docs/: CURL_TESTS.md  EMAIL_SETUP.md  EVENT_PUBLISHER_API.md  IMPLEMENTATION_PLAN.md  INTEGRATION_POINTS.md  INTEGRATION_TESTS.md  OPERATIONAL_RUNBOOK.md  PROJECT_SUMMARY.md  QA_REPORT_SMTP.md  RBAC_SPECIFICATION.md  REFRESH_TOKEN_GUIDE.md  TECHNICAL_SPECIFICATION.md
migration/: env.py
openspec/: config.yaml
scripts/: check_aiosmtplib.py  generate_keys.py  init_database.py  init_db.py
tests/: __init__.py  conftest.py  test_authentication_email_confirmation.py  test_e2e_user_deletion_flow.py  test_email_notifications.py  test_email_retry.py  test_email_sender.py  test_email_service.py  test_email_templates.py  test_event_publisher.py  test_password_reset_api.py  test_password_reset_service.py  test_refresh_token_model.py  test_refresh_token_service.py  test_register.py  test_registration_with_email.py  test_session_service.py  test_token_blacklist_service.py
(+106 files in other folders)
